--- a/ror-mvc-app/test/fixtures/product_wishlists.yml
+++ b/ror-mvc-app/test/fixtures/product_wishlists.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  product_id: 
-  user_id: 1
-
-two:
-  product_id: 
-  user_id: 1
+# This model initially had no columns defined. If you add columns to the
+# model remove the '{}' from the fixture names and add the columns immediately
+# below each fixture, per the syntax in the comments below
+#
+one: {}
+# column: value
+#
+two: {}
+# column: value
