--- a/ror-mvc-app/test/fixtures/searches.yml
+++ b/ror-mvc-app/test/fixtures/searches.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  search_term: 
-  user_id: 1
+  search_term: MyString
 
 two:
-  search_term: 
-  user_id: 1
+  search_term: MyString
