--- a/ror-mvc-app/config/database.yml
+++ b/ror-mvc-app/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: ror-mvc-app_development1
+  database: ror_mvc_app_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: ror-mvc-app_test1
+  database: ror_mvc_app_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: ror-mvc-app_production1
+  database: ror_mvc_app_production
   username: ror-mvc-app
   password: <%= ENV['ROR-MVC-APP_DATABASE_PASSWORD'] %>
