--- a/ror-mvc-app/test/fixtures/platforms.yml
+++ b/ror-mvc-app/test/fixtures/platforms.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: 
+  name: MyString
   url: MyString
 
 two:
-  name: 
+  name: MyString
   url: MyString
